# script_recall_precision

./: .gitignore  pyproject.toml
src/: bib2table.py  file_access.py  main.py  metrics.py  zhang_metrics.py
src/readers/: bib_reader.py  csv_reader.py
